--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "adventure",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "out/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^11.13.5"
+    "@types/node": "^11.13.5",
+    "ts-node": "^8.1.0",
+    "typescript": "^3.4.4"
   }
 }
