--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
       "target": "esnext",
       "lib": [
         "esnext"
-      ]
+      ],
+      "sourceMap": true,
+      "outDir": "./out"
     }
   }
