--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^11.13.5",
+    "colors": "^1.3.3",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.4"
   }
