--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "adventure",
-  "version": "1.0.0",
-  "description": "",
-  "main": "out/main.js",
+  "version": "0.0.1",
+  "description": "Textbased adventure game configurable with json and js",
+  "main": "main.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node main.ts",
+    "test": "./test.sh"
   },
-  "author": "",
+  "author": "Johan",
   "license": "ISC",
   "dependencies": {
     "@types/node": "^11.13.5",
-    "colors": "^1.3.3",
-    "ts-node": "^8.1.0",
-    "typescript": "^3.4.4"
+    "colors": "^1.4.0",
+    "ts-node": "^9.0.0",
+    "typescript": "^3.9.7"
   }
 }
